proyectos stm/ControlMotor/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:35:15 **** Incremental Build of configuration Debug for project PowerSupply ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "PowerSupply.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bogur\Desktop\STM32\PowerSupply\STM32F411VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PowerSupply.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: PowerSupply.elf
 
arm-none-eabi-size  PowerSupply.elf 
arm-none-eabi-objdump -h -S PowerSupply.elf  > "PowerSupply.list"
   text	   data	    bss	    dec	    hex	filename
  20220	     20	   1900	  22140	   567c	PowerSupply.elf
Finished building: default.size.stdout
 
Finished building: PowerSupply.list
 
17:35:18 **** Incremental Build of configuration Debug for project PowerSupply ****
make -j12 all 
arm-none-eabi-size  PowerSupply.elf 
   text	   data	    bss	    dec	    hex	filename
  20220	     20	   1900	  22140	   567c	PowerSupply.elf
Finished building: default.size.stdout
 
17:40:38 **** Incremental Build of configuration Debug for project PowerSupply ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:45:20: error: expected ')' before ';' token
   45 | #define T_PILOT 500; //ms
      |                    ^
../Core/Src/main.c:157:43: note: in expansion of macro 'T_PILOT'
  157 |         if (HAL_GetTick() > pastTimeCom + T_PILOT)
      |                                           ^~~~~~~
../Core/Src/main.c:157:12: note: to match this '('
  157 |         if (HAL_GetTick() > pastTimeCom + T_PILOT)
      |            ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
17:41:57 **** Incremental Build of configuration Debug for project PowerSupply ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "PowerSupply.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bogur\Desktop\STM32\PowerSupply\STM32F411VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PowerSupply.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: PowerSupply.elf
 
arm-none-eabi-size  PowerSupply.elf 
arm-none-eabi-objdump -h -S PowerSupply.elf  > "PowerSupply.list"
   text	   data	    bss	    dec	    hex	filename
  20308	     20	   1900	  22228	   56d4	PowerSupply.elf
Finished building: default.size.stdout
 
Finished building: PowerSupply.list
 
17:46:53 **** Incremental Build of configuration Debug for project PowerSupply ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "PowerSupply.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bogur\Desktop\STM32\PowerSupply\STM32F411VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PowerSupply.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: PowerSupply.elf
 
arm-none-eabi-size  PowerSupply.elf 
arm-none-eabi-objdump -h -S PowerSupply.elf  > "PowerSupply.list"
   text	   data	    bss	    dec	    hex	filename
  20308	     20	   1900	  22228	   56d4	PowerSupply.elf
Finished building: default.size.stdout
 
Finished building: PowerSupply.list
 
